--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <video autoplay muted loop id="background-video">
+        <source src="videoplayback.webm" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     <div class="container">
         <h1>Eco-Friendly Quiz</h1>
 
@@ -73,8 +77,15 @@
             </div>
             <button type="button" onclick="checkAnswers()">Submit</button>
         </form>
+
         <div id="result"></div>
+        <div id="celebration" class="celebration-hidden">
+            <h2>Congratulations!</h2>
+            <p id="discount-info"></p>
+            <div id="balloons"></div>
+        </div>
     </div>
     <script src="script.js"></script>
+    <script src="balloons.js"></script>
 </body>
 </html>
