--- a/landing page/index.html
+++ b/landing page/index.html
@@ -182,7 +182,7 @@
         <p>Web Developer</p>
         <div class="icons">
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fas fa-times icon"></i>
           </a>
           <a href="#">
             <i class="fab fa-linkedin"></i>
@@ -206,7 +206,7 @@
         <p>Web Developer</p>
         <div class="icons">
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fas fa-times icon"></i>
           </a>
           <a href="#">
             <i class="fab fa-linkedin"></i>
@@ -230,7 +230,7 @@
         <p>Web Developer</p>
         <div class="icons">
           <a href="#">
-            <i class="fab fa-twitter"></i>
+            <i class="fas fa-times icon"></i>
           </a>
           <a href="#">
             <i class="fab fa-linkedin"></i>
@@ -258,7 +258,7 @@
               </li>
               <li>
                   <a href="#">
-                      <i class="fab fa-twitter icon"></i>
+                      <i class="fas fa-times icon"></i>
                   </a>
               </li>
               <li>
