--- a/landing page/index.html
+++ b/landing page/index.html
@@ -255,6 +255,12 @@
               </li>
           </ul>
           <p>&copy; 2024 Carbon Emission Awareness. All rights reserved.</p>
+            <iframe
+src="https://www.chatbase.co/chatbot-iframe/lA8DF88CX7SjMpA8K5-vr"
+width="100%"
+style="height: 100%; min-height: 700px"
+frameborder="0"
+></iframe>
       </footer>
       
 
